[gd_scene load_steps=5 format=3 uid="uid://cgdjiyjasd5u"]

[ext_resource type="Script" path="res://Objects/spike_trap.gd" id="1_2rle4"]
[ext_resource type="Texture2D" uid="uid://cla3wwn5xqiav" path="res://Assets/SpikeTrap.png" id="1_d5xh1"]
[ext_resource type="AudioStream" uid="uid://mdu6xo6r5jy" path="res://Sfx/anvil-hit-2-14845.mp3" id="3_2ancp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7sevp"]
size = Vector2(4, 8)

[node name="SpikeTrap" type="StaticBody2D" groups=["Enemy"]]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_2rle4")

[node name="SpikeSprite" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_d5xh1")
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="BaseSprite" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(0, 8)
texture = ExtResource("1_d5xh1")
region_enabled = true
region_rect = Rect2(0, 8, 8, 8)

[node name="SpikeColl" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7sevp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2ancp")
volume_db = -20.0
